Refactored code that does bookeeping for compacting files. (#2213)